apps/netbird/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbird
  namespace: netbird
  annotations:
    glance/icon: di:wireguard
    glance/name: "NetBird VPN"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: mkcert-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - netbird.wst.sh
      secretName: netbird-wst-sh-tls
  rules:
    - host: netbird.wst.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbird-dashboard
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbird-api
  namespace: netbird
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: mkcert-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.netbird.wst.sh
      secretName: api-netbird-wst-sh-tls
  rules:
    - host: api.netbird.wst.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbird-management
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbird-signal
  namespace: netbird
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: mkcert-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - signal.netbird.wst.sh
      secretName: signal-netbird-wst-sh-tls
  rules:
    - host: signal.netbird.wst.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbird-signal
                port:
                  number: 80
